// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeLink renders correctly 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
}

.c2 {
  fill: var(--colorForeground);
  font-size: 1.2rem;
}

.c0 {
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover,
.c0:focus {
  -webkit-transform: translate3D(-0.25rem,0,0);
  -ms-transform: translate3D(-0.25rem,0,0);
  transform: translate3D(-0.25rem,0,0);
}

<a
  class="c0"
  href="/"
>
  <button
    aria-label="Back to Homepage"
    class="c1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"
      />
    </svg>
  </button>
</a>
`;

exports[`HomeLink with custom "to" renders correctly 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 0;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
}

.c2 {
  fill: var(--colorForeground);
  font-size: 1.2rem;
}

.c0 {
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover,
.c0:focus {
  -webkit-transform: translate3D(-0.25rem,0,0);
  -ms-transform: translate3D(-0.25rem,0,0);
  transform: translate3D(-0.25rem,0,0);
}

<a
  class="c0"
  href="/some-page/"
>
  <button
    aria-label="Back"
    class="c1"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"
      />
    </svg>
  </button>
</a>
`;
